--- a/covid19d.html
+++ b/covid19d.html
@@ -50,9 +50,32 @@
         </div>
       </nav>
     </header>
-    <div class="container nav-padding content">
-      <h1>表彰</h1>
-      <p>未定</p>
+    <div class="container nav-padding content"><h1>新型コロナ対策について</h1>
+<p>2022年11月11日現在の状況です．状況により更新がある場合がありますので，常に最新の情報を確認するようにしてください．
+WISS2022では，現地とオンラインのハイブリッドでの開催を予定しています．
+ただし，状況によっては現地開催を取りやめ，完全オンラインで実施する可能性があります．</p>
+<hr>
+<p>開催場所<a href="https://www.daiwaresort.jp/chain/feature/1031045/index.html">ホテルの新型コロナ対策</a>に加え，WISS2022では以下の対策を実施します．</p>
+<ul>
+<li>現地参加者に必要回数のワクチン接種を求める</li>
+<li>ホテルの客室は原則1部屋1名での利用とする</li>
+<li>現地参加者の人数を最大150名程度に制限する</li>
+<li>デモ・ポスター発表では，新型コロナウィルス感染のリスクを極力下げる運用を行う
+<ul>
+<li>感染リスクの観点に基づく発表内容の事前チェック
+<ul>
+<li>現地での発表が認められない例： マスクを外して歌うことが必要なデモ，直接素手で触る必要があるのに消毒ができないデバイスを用いたデモ，個別包装されていない食べ物を複数人が素手でつかみ提供するようなデモ</li>
+</ul>
+</li>
+<li>発表者と聴講者はマスク装着</li>
+<li>必要に応じてデモの都度のデバイス消毒，あるいは使い捨て手袋を介した体験</li>
+<li>換気の徹底</li>
+<li>発表者と聴講者間の距離の確保（最低1m）</li>
+</ul>
+</li>
+</ul>
+<p>上記のような新型コロナ対策は実施しますが，感染のリスクを0にすることはできません． また，WISS2022内のイベントだけでなく，ホテルまでの移動，現地ホテルでの自室内での行動なども，感染のリスクを押し上げる可能性があります． WISS2022に参加されるみなさまには，感染のリスクが0にはならないこと，感染リスクはみなさん1人1人の行動によって変わりうることをご理解いただいた上で，現地参加をご検討いただきたいと考えています．</p>
+
     </div>
     <footer>
       <div class="container">
