--- a/covid19d.html
+++ b/covid19d.html
@@ -57,9 +57,9 @@ WISS2022では，現地とオンラインのハイブリッドでの開催を予
 <hr>
 <p>開催場所<a href="https://www.daiwaresort.jp/chain/feature/1031045/index.html">ホテルの新型コロナ対策</a>に加え，WISS2022では以下の対策を実施します．</p>
 <ul>
-<li>現地参加者に必要回数のワクチン接種を求める
+<li>現地参加者にはWISS2022参加の2週間前までに必要回数（3回）のワクチン接種（初日（12月14日）から参加する場合は2022年11月29日を含みそれ以前に3回目を接種）を求める
 <ul>
-<li>必要回数満たす方：必要回数を接種していることがわかる書類を，参加初日に受付で提示することで，現地参加を認めます．書類は紙媒体でも電子媒体でも構いません．</li>
+<li>必要回数満たす方：必要回数を接種していることがわかる書類を，参加初日に受付で提示することで，現地参加を認めます．書類は紙媒体でも電子媒体でも構いません．海外の接種についても日本語または英語の証明書があれば，現地参加を認めます．それ以外の言語の証明書しかない，あるいは証明書を紛失して提示できない場合は，以下の「必要回数に満たない方」と同じ対応になります．</li>
 <li>必要回数に満たない方：参加初日に医療機関等で実施したPCR検査の陰性結果を，参加初日に受付で提示することで，現地参加を認めます．PCR検査の検体採取方法は問いません．（つまり，14日から参加する方は，WISS会場に到着するまでに検体採取日が14日のPCR検査を受けて，その陰性結果を提示してください．）</li>
 <li>上記以外の方（書類等の持参忘れを含む）：仙台駅まで戻っていただき，PCR検査の陰性結果を入手後，受付で書類を提示することで，現地参加を認めます．PCR検査の陰性結果を入手できない場合は，客室からオンライン参加していただきます．</li>
 </ul>
